# stochastic

./: .gitignore  .gitmodules  .readthedocs.yml  .tool-versions  .travis.yml  2DKS.py  CHANGELOG.rst  CONTRIBUTORS.rst  HISTORY.rst  KS2D.py  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  Names.txt  Pipfile  README.md  README.rst  TEST_2DKS.py  TEST_KS2D.py  conf.py  dev.py  fwsfsd  index.rst  pyproject.toml  pytest.ini  readthedocs.yml  requirements-dev.txt  requirements.txt  setup.py  tox.ini  tutorial.rst
.github/workflows/: build.yml
.pytest_cache/v/cache/: lastfailed
_build/doctrees/: environment.pickle  functions.doctree  index.doctree  testalgos.doctree  tutorial.doctree  utilityfunctions.doctree
_build/html/: .buildinfo  functions.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  testalgos.html  tutorial.html  utilityfunctions.html
_build/html/_sources/: functions.rst.txt  index.rst.txt  testalgos.rst.txt  tutorial.rst.txt  utilityfunctions.rst.txt
docs/: Makefile  base.rst  conf.py  continuous.rst  diffusion.rst  discrete.rst  general.rst  index.rst  make.bat  make_images.py  noise.rst  notes.rst  random.rst  requirements.txt  sources.rst
docs/.doctrees/: HISTORY.doctree  README.doctree
docs/.doctrees/docs/: base.doctree  continuous.doctree  diffusion.doctree  discrete.doctree  general.doctree  index.doctree  noise.doctree  notes.doctree
docs/_build/doctrees/: continuous.doctree  descrete.doctree  diffusion.doctree  discrete.doctree  environment.pickle  noise.doctree  notes.doctree
docs/_build/html/: .buildinfo  base.html  continuous.html  (+11 more)
nhppy/: __init__.py  __version__.py  base.py
nhppy/analysis/: Estimation.py  KS2D.py  __init__.py
nhppy/continuous/: __init__.py  bessel.py  brownian_bridge.py  brownian_excursion.py  brownian_meander.py  brownian_motion.py  cauchy.py  cox.py  fractional_brownian_motion.py  gamma.py  geometric_brownian_motion.py  mixedpoisson.py  nhpoissonprocess.py  nhpp.py  poisson.py  squared_bessel.py  variance_gamma.py  wiener.py
nhppy/diffusion/: __init__.py  constant_elasticity_variance.py  cox_ingersoll_ross.py  ornstein_uhlenbeck.py  vasicek.py
nhppy/discrete/: __init__.py  bernoulli.py  chinese_restaurant.py  markov_chain.py  moran.py  random_walk.py
nhppy/noise/: __init__.py  fractional_gaussian_noise.py  gaussian_noise.py
scripts/: make_images.py
stochastic/: __init__.py  __version__.py  _version.py  base.py  bernoulli.py  brownian_motion.py  cauchy.py  chinese_restaurant.py  chineserestaurant.py  fractional_brownian_motion.py  gamma.py  markov_chain.py  markovchain.py  moran.py  poisson.py  random.py  random_walk.py  randomwalk.py
stochastic/analysis/: Estimation.py  KS2D.py  __init__.py
stochastic/continuous/: __init__.py  bessel.py  brownian_bridge.py  brownian_excursion.py  brownian_meander.py  brownian_motion.py  cauchy.py  cox.py  fractional_brownian_motion.py  gamma.py  geometric_brownian_motion.py  inverse_gaussian.py  mixed_poisson.py  multifractional_brownian_motion.py  nh_poisson_process.py  nhpoissonprocess.py  non_homogeneous_poisson.py  nonhomogeneous_poisson.py  poisson.py  squared_bessel.py  variance_gamma.py  wiener.py
stochastic/diffusion/: __init__.py  base.py  constant_elasticity_variance.py  cox_ingersoll_ross.py  extended_vasicek.py  ornstein_uhlenbeck.py  vasicek.py
stochastic/discrete/: __init__.py  bernoulli.py  chinese_restaurant.py  markov_chain.py  moran.py  random_walk.py
stochastic/noise/: __init__.py  colored_noise.py  fractional_gaussian_noise.py  gaussian_noise.py
stochastic/processes/: __init__.py  base.py
stochastic/tests/: tests.py
stochastic/utils/: __init__.py  validation.py
tests/: __init__.py
tests/analysis/: conftest.py  test_KS2D.py  test_estimation.py
tests/base/: conftest.py  test_base_checks.py  test_base_continuous.py
tests/continuous/: conftest.py  test_bessel.py  test_brownian_bridge.py  test_brownian_excursion.py  test_brownian_meander.py  test_brownian_motion.py  test_cauchy.py  test_fractional_brownian_motion.py  test_gamma.py  test_geometric_brownian_motion.py  test_inverse_gaussian.py  test_mixed_poisson.py  test_multifractional_brownian_motion.py  test_nh_poisson_process.py  test_non_homogeneous_poisson.py  test_poisson.py  test_squared_bessel.py  test_variance_gamma.py  test_wiener.py
tests/diffusion/: conftest.py  test_constant_elasticity_variance.py  test_cox_ingersoll_ross.py  test_ornstein_uhlenbeck.py  test_vasicek.py
tests/discrete/: conftest.py  test_bernoulli.py  test_chinese_restaurant.py  test_markov_chain.py  test_moran.py  test_random_walk.py
tests/noise/: __init__.py  conftest.py  test_colored_noise.py  test_fractional_gaussian_noise.py  test_gaussian_noise.py
tests/random/: test_random.py
tests/utils/: conftest.py  test_utils.py  test_validation.py
(+111 files in other folders)
