[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
force_single_line = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

[tool.poetry]
name = "stochastic"
version = "0.5.0"
description = "Generate realizations of stochastic processes"
authors = ["Flynn <crf204@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/crflynn/stochastic"
repository = "https://github.com/crflynn/stochastic"
documentation = "https://stochastic.readthedocs.io/en/latest/"
keywords = ["stochastic", "processes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
include = [
    "CHANGELOG.rst",
    "CONTRIBUTORS.rst",
    "LICENSE.txt"
]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.17"
scipy = "^1.3"

[tool.poetry.dev-dependencies]
matplotlib = "^3.1"
pytest = "^4.5"
pytest-cov = "^2.7"
pytest-xdist = "^1.28"
pytest-mock = "^1.10"
sphinx = "^2.0"
sphinx-rtd-theme = "^0.4.3"
sphinx-autobuild = "^0.7.1"
black = {version = "^19.10b0", allow-prereleases = true}
isort = "^4.3.21"
codecov = "^2.1.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
