[tool.poetry]
name = "stochastic"
version = "0.7.0"
description = "Generate realizations of stochastic processes"
authors = ["Flynn <crf204@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/crflynn/stochastic"
repository = "https://github.com/crflynn/stochastic"
documentation = "https://stochastic.readthedocs.io/en/latest/"
keywords = ["stochastic", "processes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
include = [
    { path="CHANGELOG.rst", format="sdist" },
    { path="CONTRIBUTORS.rst", format="sdist" },
    { path="LICENSE.txt", format="sdist" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"  # constrained by scipy
numpy = "^1.19"
scipy = "^1.8"

[tool.poetry.dev-dependencies]
matplotlib = "^3.1"
pytest = "^4.5"
pytest-cov = "^2.7"
pytest-xdist = "^1.28"
pytest-mock = "^1.10"
sphinx = "^2.0"
sphinx-rtd-theme = "^0.4.3"
sphinx-autobuild = "^0.7.1"
codecov = "^2.1.7"
Jinja2 = "3.0.3"  # https://github.com/sphinx-doc/sphinx/issues/10291
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
force_single_line = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
